obk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocr2-service
  namespace: dev
spec:
  selector:
    app: dev
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
